# JCTaxLedger

./: .env.example  .gitignore  README.md  README4ETL.md  pyproject.toml
etl/: balanceReport.py  downloadBrookhavenTaxStatement.py
skills/taxjc-etl/: SKILL.md
